--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -5,6 +5,8 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  schedule: 
+  - cron: "0 0 * * 0"
 
 permissions:
   contents: read
@@ -12,7 +14,7 @@ permissions:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v3
